pushed font name down to avoid being covered by variants/colored font name to indicate link

--- a/client/src/components/Font/Font.css
+++ b/client/src/components/Font/Font.css
@@ -1,9 +1,10 @@
 .font {
   position: relative;
-  height: 240px;
+  height: 280px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around; }
+  justify-content: space-around;
+  padding-top: 40px; }
   .font__interaction {
     display: flex;
     flex-direction: column;
