--- a/client/src/components/FontInfo/FontInfo.scss
+++ b/client/src/components/FontInfo/FontInfo.scss
@@ -5,7 +5,7 @@
     &__link {
         font-size: $font-size-md;
         margin: 0;
-        color: black;
+        color: royalblue;
         display: inline-block;
     }
     &__category {
